--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+:root {
+    --tt-primary: #1C1F33;
+    --tt-secondary: #525069;
+
+}
 
 .jockey-one-regular {
     font-family: "Jockey One", sans-serif;
@@ -5,7 +10,28 @@
     font-style: normal;
   }
 
-  
+  .josefin-sans-reg {
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+.tt-primary{
+    color:var(--tt-primary);
+}
+.tt-secondary{
+    color:var(--tt-secondary);
+}
+
+
+.tt-bg{
+    background: linear-gradient(0deg, #F8F9FA -13.89%, #C3BBD7 62.35%, #B7ADCF 78.28%, #1C1F33 128.21%);
+
+}
+.tt-light-bg{
+ background: #F8F9FA;
+}
 .con-font {
     font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     
@@ -30,7 +56,8 @@
     border-radius: 100px ;
     box-shadow: 0px 4px 4px 0px #00000040;
     color: #B7ADCF;
-    padding-right: 1rem;
-    padding-left: 1rem;
+    padding-right: 1.5rem !important;
+    padding-left: 1.5rem !important;
+
 
 }
