--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,20 @@
     --tt-triatry: #B7ADCF
 
 }
+body {
+    font-family: Arial, sans-serif;
+
+    height: 100vh; /* Full viewport height */
+    background: linear-gradient(0.22deg, #F8F9FA 0.19%, #C3BBD7 68.72%, #B7ADCF 83.03%, #1C1F33 127.92%);
+    background-size: cover; /* Ensure gradient covers the full area */
+    background-repeat: no-repeat; /* Prevent any repeating */
+
+    
+    min-block-size: 100%;
+    min-inline-size: 100%;
+}
+
+    
 
 .jockey-one-regular {
     font-family: "Jockey One", sans-serif;
@@ -34,8 +48,14 @@
  background: #F8F9FA;
 }
 .tt-pink-bg{
+    position: relative;
     background:var(--tt-triatry);
+    /* background-image: url("/assets/Perlin\ \(contour\).png");
+        background-repeat: repeat/no-repeat;
+        background-size: 1600px 840px: */
+       
 }
+
 .con-font {
     font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     
@@ -64,4 +84,25 @@
     padding-left: 1.5rem !important;
 
 
+}
+
+.btn-tt-secondary {
+    --bs-btn-color: #5B5C6C;
+    --bs-btn-bg: #EBEAF1;
+    --bs-btn-border-color: #EBEAF1;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #574D75;
+    --bs-btn-hover-border-color: #574D75;
+    --bs-btn-focus-shadow-rgb: 64, 79, 245;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #574D75;
+    --bs-btn-active-border-color: #574D75;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #574D75;
+    --bs-btn-disabled-border-color: #574D75;
+  }
+  .rounded-top-4 {
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
 }
