--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,22 @@ body {
 
 .card-bento-body {
     flex: 1 1 auto;
-    padding: 25px;
+    padding: 27px 36px;
     color: #fff;
+}
+.bento-title{
+    font-family: Arial;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 26.64px;
+    text-align: left;
+}
+.bento-text {
+    font-family: Arial;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 19.98px;
+    text-align: left;
 }
     
 
