Update portfolio assets and styles, remove quick contact
Replaced old resume PDF with updated CV, added a new 'coming soon' image, and updated an image in the project-cafe-royal folder. Removed the quick contact section from contact.html and updated color and font sizes in main.css for improved appearance. Also updated the live site link in README.md and removed the large styles.css file.

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
     
         /* background: radial-gradient(50% 50% at 50% 50%, #9C72EF 0%, #F4F1FA 100%); */
         background-color: #ffffff;
-        color: #525069 !important;
+        color: #3C3A47  !important;
     }
     .bg-container{
         background: rgba(234, 230, 245, 0.60);
@@ -34,15 +34,17 @@
        flex-direction: column;
     }
     #index-hero h1{
-       font-size: 80px;
+       font-size: 120px;
        color: #1C1F33;
+       font-weight: 600;
     }
     
     #index-hero p{
-       font-size: 18px;
+       font-size: 20px;
     }
     #index-hero span{
         font-size: 20px;
+        font-weight: 500;
     }
 .py-hero{
     padding-top: 210px;
